# pinger

./: Makefile  README.md  pyproject.toml
pinger/: config.py  main.py
pinger/sender/: sender.py
tests/: test_pinger.py
